fix: Light scrollbars in dark mode in Chromium
Well, not only scrollbars, it just happens there are no other browser
controls yet xD

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -95,6 +95,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    color-scheme: dark;
+
     --text: var(--light2);
     --background: var(--bg3);
 
